--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "obsidian_guided_journaling",
+  "name": "obsidian_llm_shortcut",
   "type": "module",
   "version": "0.0.1",
   "main": "dist/main.js",
   "scripts": {
+    "test": "vitest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "check": "tsc",
     "build": "node esbuild.ts",
     "build:dev": "NODE_ENV=development node esbuild.ts",
     "dev": "NODE_ENV=development ESBUILD_WATCH=true node esbuild.ts"
@@ -14,9 +18,20 @@
   "author": "chernodubv",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@eslint/json": "^0.12.0",
+    "@eslint/markdown": "^6.5.0",
     "@types/node": "^24.0.1",
     "esbuild": "^0.25.5",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
     "obsidian": "^1.8.7",
-    "typescript": "^5.8.3"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "openai": "^5.3.0"
   }
 }
