--- a/.release-it.json
+++ b/.release-it.json
@@ -4,7 +4,7 @@
   },
   "github": {
     "release": true,
-    "assets": ["dist/main.js", "manifest.json"]
+    "assets": ["main.js", "manifest.json"]
   },
   "npm": {
     "publish": false
